<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical" >

    <TextView
        style="@style/AboutusItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/aboutus_text"
        android:textSize="16sp" />

    <LinearLayout
        style="@style/AboutusItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="0dp"
            android:padding="5dp"
            android:text="@string/aboutus_text1"
            android:textColor="#648046"
            android:textSize="18sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="#cccccc" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/aboutus_text2"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutus_text21"
            android:textSize="13sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aboutus_text22"
            android:textSize="13sp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/zixingche"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/zixingche"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/zixingche_web1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus_text231"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/zixingche_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/zixingche_web1"
                    android:text="@string/aboutus_text232"
                    android:textColor="#0000ff"
                    android:textSize="13sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/zixingche"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/wuxian_web1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aboutus_text241"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/wuxian_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/wuxian_web1"
                    android:text="@string/aboutus_text242"
                    android:textColor="#0000ff"
                    android:textSize="13sp" />
            </RelativeLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>