<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/opinion_linear_margin"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/feedback"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/need"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spinner_left_margin"
                android:background="@drawable/spinner"
                android:entries="@array/opinion"
                android:paddingLeft="5dp"
                android:text="@string/need"
                android:textColor="#666666"
                android:textSize="@dimen/common_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_margin"
                android:maxLength="2000"
                android:text="@string/opinion"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/problem_opinion"
                style="@style/AboutusItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="5dp"
                android:gravity="top"
                android:hint="@string/problem_opinion"
                android:inputType="textMultiLine"
                android:minLines="8"
                android:textSize="@dimen/common_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_margin"
                android:text="@string/contact"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/contact_way"
                style="@style/AboutusItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/name_telephone_email"
                android:textSize="16dp" />

            <Button
                android:id="@+id/button"
                android:layout_width="fill_parent"
                android:layout_height="40dip"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bt_submit_bg"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>