<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
     android:background="@color/light_gray">

    <LinearLayout
        style="@style/AboutusItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/now_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/now_version"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/new_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/new_version"
            android:textSize="16sp" />
        <LinearLayout android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="版本描述："
            android:textSize="16sp" />
         <TextView
            android:id="@+id/version_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_content"
            android:textSize="16sp" />
         </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/version_say"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/start_update_version"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/gengxin"
        android:textSize="18dp"
        android:shadowColor="#333333"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="1.0"/>
</LinearLayout>