<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     android:background="@color/light_gray" >

    <LinearLayout
        style="@style/AboutusItem"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/last_update_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_update_time"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/update_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/update_count"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/update_say"
            android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:id="@+id/start_synchro"
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/gengxin"
        android:textSize="18dp"
        android:shadowColor="#333333"
        android:shadowDx="1.5"
        android:shadowDy="1.5"
        android:shadowRadius="1.0"/>
</LinearLayout>