<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fdfdfc"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/bikesite_detial_margin"
        android:layout_marginRight="@dimen/bikesite_detial_margin"
        android:layout_marginTop="16dp" >

        <TextView
            android:id="@+id/bike_site_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxEms="10"
            android:singleLine="true"
            android:text="@string/tv_site_name"
            android:textColor="#555555"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/bike_site_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/tv_site_distance"
            android:textColor="#7b7676"
            android:textSize="12sp" />

        <!--
             <ImageView
            android:id="@+id/bike_site_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/bsd_sitepoint"
            android:gravity="center" />
        -->
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/middle_relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="@dimen/bikesite_detial_margin"
        android:layout_marginRight="@dimen/bikesite_detial_margin"
        android:layout_marginTop="5dp"
        android:background="@drawable/bsd_middle_bg" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/bikesite_detial_middle_margin"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_site_can_borrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_site_can_borrow"
                    android:textColor="@color/bikesite_code" />

                <TextView
                    android:id="@+id/bike_site_can_borrow_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_site_can_borrow_num"
                    android:textColor="@color/bikesite_blue" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_sitedetail"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/bikesite_progress_height"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:max="100"
                android:progressDrawable="@drawable/bikesite_detail_progress" />

            <LinearLayout
                android:id="@+id/ll_site_can_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bikesite_detial_middle_margin"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_site_can_send"
                    android:textColor="@color/bikesite_code" />

                <TextView
                    android:id="@+id/bike_site_can_send_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_site_can_send_num"
                    android:textColor="@color/bikesite_orange" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <View
        android:layout_marginTop="8dp"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#d6d6d6" />

</LinearLayout>